# ohjelmistotekniikka-hy.github.io

./: .gitignore  Gemfile  README.md  _config.yml  en_code_review.md  en_corrections.md  en_credit_transfer.md  en_material.md  en_release.md  en_search.html  en_start.md  en_tasks.md  fi_code_review.md  fi_corrections.md  fi_credit_transfer.md  fi_instructors.md  fi_material.md  fi_release.md  fi_search.html  fi_start.md  fi_tasks.md  haku.html  harjoitustyo.md  hyvaksiluku.md  index.md  java-materiaali.md  koodikatselmointi.md  korjausehdotus.md  materiaali.md  ohjaajan-ohje.md  puller.sh  release.md  search.js
_data/: menu.yml
_includes/: ajankohtaista.md  ala_plagioi.md  changelog_info.md  deadline_info.md  en_changelog_info.md  en_code_review.md  en_deadline_info.md  en_material_engineering.md  en_plagiarism.md  en_practical_work_works.md  en_practical_work_works_info.md  en_timely.md  fi_code_review.md  fi_material_engineering.md  fi_practical_work_works.md  fi_practical_work_works_info.md  fi_timely.md  footer.html  harjoitustyon_toimivuus.md  harjoitustyon_toimivuus_info.md  harjoitustyon_toimivuus_info2.md  header.html  java_materiaali_info.md  koodikatselmointi.md  materiaali_johdanto.md  materiaali_kirjoitusvirheita.md  materiaali_ohjelmistotuotanto.md  ohjausajat.md  poetry_fix.md  typo_instructions.md  virtuaalityoasema_python_versio.md
_layouts/: default.html  page.html  post.html
harjoitustyo/: harjoitustyo.md
materiaali/: hyvaksiluku.md  koodikatselmointi.md  materiaali.md  release.md  typokorjaukset.md
materiaali/python/unicafe/: pyproject.toml
(+107 files in other folders)
