[project]
name = "unicafe"
version = "0.1.0"
description = ""
authors = [
    {name = "Kai Korpimies",email = "kai.korpimies@helsinki.fi"}
]
requires-python = "^3.12"
dependencies = [
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "coverage (>=7.13.1,<8.0.0)"
]
